package com.poo.Exs.UD6.I;

public interface AccionesPedido {

    void cancelar(Pedido pedido);

}